compiler/tests/fixtures/invalid/semantics/role_negative_min.viv
// Invalid: role with negative min

action bad-min:
    roles:
        @actor:
            as: initiator
        @crowd*:
            as: bystander
            n: -1-3
